--- a/style.css
+++ b/style.css
@@ -337,7 +337,8 @@ footer {
 .whatsapp-message {
     position: absolute;
     bottom: 90px; /* Sobe 75px para ficar acima do botão de 60px */
-    right: 15;
+    transfom: translatex (-20%)
+    right: 0;
     background-color: #ffffff;
     color: #333;
     padding: 10px 15px;
@@ -366,6 +367,7 @@ footer {
     transform: scale(1.1);
     transition: 0.3s;
 }
+
 
 
 
